@@ -21,7 +21,7 @@ namespace CIAO
   PortableServer::Servant
   Dynamic_Component_Activator::incarnate (const PortableServer::ObjectId &oid,
                                 PortableServer::POA_ptr
-                                ACE_ENV_ARG_DECL)
+                                ACE_ENV_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException,
                      PortableServer::ForwardRequest))
   {
@@ -44,7 +44,7 @@ namespace CIAO
     PortableServer::Servant ,
     CORBA::Boolean ,
     CORBA::Boolean
-    ACE_ENV_ARG_DECL)
+    ACE_ENV_ARG_DECL_NOT_USED)
     ACE_THROW_SPEC ((CORBA::SystemException))
   {
   }
